--- a/src/index.html
+++ b/src/index.html
@@ -22,8 +22,7 @@
 <body class="bootstrap-collapse" style="display: none;">
     <app-my-app>
     </app-my-app>
-    <script
-  src="https://code.jquery.com/jquery-3.4.1.min.js"
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
   integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
   crossorigin="anonymous"></script>
     <script>
